--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.team1787.lib</groupId>
     <artifactId>FlyingLib</artifactId>
     <version>0.0.1</version>
+
     <build>
         <plugins>
             <plugin>
@@ -39,5 +40,13 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub TheFlyingCircuits Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/TheFlyingCircuits/FlyingLib</url>
+        </repository>
+    </distributionManagement>
 
 </project>
