--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     <properties>
         <jupiterVersion>5.6.0-M1</jupiterVersion>
         <lombokVersion>1.18.10</lombokVersion>
+        <phoenixVersion>5.14.1</phoenixVersion>
+        <sparkVersion>1.4.1</sparkVersion>
     </properties>
 
     <dependencies>
@@ -39,7 +41,61 @@
             <version>${lombokVersion}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ctre.phoenix</groupId>
+            <artifactId>api-java</artifactId>
+            <version>${phoenixVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ctre.phoenix</groupId>
+            <artifactId>wpiapi-java</artifactId>
+            <version>${phoenixVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.revrobotics.frc</groupId>
+            <artifactId>SparkMax-java</artifactId>
+            <version>${sparkVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.wpi.first.wpilibj</groupId>
+            <artifactId>wpilibj-java</artifactId>
+            <version>2019.4.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.wpi.first.ntcore</groupId>
+            <artifactId>ntcore-java</artifactId>
+            <version>2019.4.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.wpi.first.wpiutil</groupId>
+            <artifactId>wpiutil-java</artifactId>
+            <version>2019.4.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.wpi.first.hal</groupId>
+            <artifactId>hal-java</artifactId>
+            <version>2019.4.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>ctr-electronics</id>
+            <url>http://devsite.ctr-electronics.com/maven/release/</url>
+        </repository>
+        <repository>
+            <id>REVRobotics</id>
+            <url>http://www.revrobotics.com/content/sw/max/sdk/maven/</url>
+        </repository>
+        <repository>
+            <id>wpi</id>
+            <url>https://first.wpi.edu/FRC/roborio/maven/release/</url>
+        </repository>
+    </repositories>
 
     <distributionManagement>
         <repository>
